[package]
name = "pcat"
version = "0.1.0"
edition = "2021"
author = "Yiping Deng"
description = "A command-line tool to explore Parquet files on S3"

[dependencies]
aws-config = "0.48.0"
aws-types = "0.48.0"
clap = { version = "3.2.17", features = ["derive"] }
datafusion = "11.0.0"
object_store = { version = "0.4.0", features = ["aws"] }
tokio = "1.20.1"
url = "2.2.2"
