[package]
name = "parquet-cat"
version = "0.1.1"
edition = "2021"
author = "Yiping Deng"
email = "yiping.deng.98@gmail.com"
repository = "https://github.com/DengYiping/parquet-cat/"
license = "MIT"
keywords = ["Parquet", "S3", "cat"]
description = "A command-line tool to explore Parquet files on S3, with folder support"

[dependencies]
aws-config = "0.48.0"
aws-types = "0.48.0"
clap = { version = "3.2.17", features = ["derive"] }
datafusion = "11.0.0"
object_store = { version = "0.4.0", features = ["aws"] }
tokio = "1.20.1"
url = "2.2.2"

[[bin]]
name = "pcat"
path = "src/main.rs"